shared/Movere/movere-alb-sg.yaml
---
# Brian Gaber
# Movere Cloudformation Template
# Creates SGs, ALB, Listeners and Target Groups.

Parameters:
  CreationDate:
    Description: Creation Date
    Type: String
    Default: "2022-03-04 10:15:00"
    AllowedPattern: "^\\d{4}(-\\d{2}){2} (\\d{2}:){2}\\d{2}$"
    ConstraintDescription: Date and time of creation
  Creator:
    Description: Name of Creator
    Default: Brian Gaber
    Type: String
  Application:
    Description: Application Name
    Default: Movere
    Type: String
  Owner:
    Description: Application Owner
    Default: Bryan Erwin
    Type: String
  SharedSvcVpc:
    Description: Shared Service 10.251.0.0/21 CIDR VPC
    Default: vpc-25fb4742
    Type: String
  SharedSvcVpcPubSubnet1a:
    Description: Shared Service 10.251.0.0/24 Public Subnet us-east-1a
    Default: subnet-43346d69
    Type: String
  SharedSvcVpcPubSubnet1b:
    Description: Shared Service 10.251.1.0/24 Public Subnet us-east-1b
    Default: subnet-92444de4
    Type: String
  SharedSvcVpcPrivSubnet1a:
    Description: Shared Service 10.251.2.0/23 Private Subnet us-east-1a
    Default: subnet-26376e0c
    Type: String
  SharedSvcVpcPrivSubnet1b:
    Description: Shared Service 10.251.4.0/23 Private Subnet us-east-1b
    Default: subnet-52474e24
    Type: String
  movereConsoleEC2Id:
    Description: Movere Console Server Id
    Default: i-0ecf916d7112c43a7
    Type: String
  movereConsoleEC2Ip:
    Description: Movere Console Server Private IP Address
    Default: 10.251.2.233/32
    Type: String
    AllowedPattern: ^(([1-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]|32))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28

Resources:  
  movereAlbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow access from the Internet
      GroupName: movere-alb-sec-group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: allow https access from Internet
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      VpcId:
        Ref: SharedSvcVpc

  movereConsoleSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow https from Movere ALB
      GroupName: movere-console-sec-group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 10.0.0.0/8
          Description: allow ssh access from CMPC internal
          FromPort: 3389
          IpProtocol: tcp
          ToPort: 3389
        - CidrIp: 192.168.88.0/21
          Description: allow ssh access from CMPC internal
          FromPort: 3389
          IpProtocol: tcp
          ToPort: 3389
        - CidrIp: 168.108.0.0/16
          Description: allow ssh access from Shared
          FromPort: 3389
          IpProtocol: tcp
          ToPort: 3389
        - CidrIp: 150.124.0.0/16
          Description: allow ssh access from CMPC VPN
          FromPort: 3389
          IpProtocol: tcp
          ToPort: 3389
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 445
          IpProtocol: tcp
          ToPort: 445
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 8082
          IpProtocol: tcp
          ToPort: 8082
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 8085
          IpProtocol: tcp
          ToPort: 8085

        - CidrIp: 10.16.0.0/16
          Description: Used for all internal traffic between the targeted  endpoints and the Console.
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 10.17.0.0/16
          Description: Used for all internal traffic between the targeted  endpoints and the Console.
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 10.18.0.0/16
          Description: Used for all internal traffic between the targeted  endpoints and the Console.
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 10.252.0.0/20
          Description: Used for all internal traffic between the targeted  endpoints and the Console.
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 172.19.0.0/16
          Description: Used for all internal traffic between the targeted  endpoints and the Console.
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 172.23.0.0/16
          Description: Used for all internal traffic between the targeted  endpoints and the Console.
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 10.98.3.0/24
          Description: Used for all internal traffic between the targeted  endpoints and the Console.
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 10.99.0.0/16
          Description: Used for all internal traffic between the targeted  endpoints and the Console.
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 131.99.0.0/16
          Description: Used for all internal traffic between the targeted  endpoints and the Console.
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 161.108.0.0/16
          Description: Used for all internal traffic between the targeted  endpoints and the Console.
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 206.160.0.0/16
          Description: Used for all internal traffic between the targeted  endpoints and the Console.
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443

        - CidrIp: 10.16.0.0/16
          Description: Used to pull actual resource consumption scanning  payloads from the target device if the upload to the  Console or cloud fails
          FromPort: 137
          IpProtocol: tcp
          ToPort: 139
        - CidrIp: 10.17.0.0/16
          Description: Used to pull actual resource consumption scanning  payloads from the target device if the upload to the  Console or cloud fails
          FromPort: 137
          IpProtocol: tcp
          ToPort: 139
        - CidrIp: 10.18.0.0/16
          Description: Used to pull actual resource consumption scanning  payloads from the target device if the upload to the  Console or cloud fails
          FromPort: 137
          IpProtocol: tcp
          ToPort: 139
        - CidrIp: 10.252.0.0/20
          Description: Used to pull actual resource consumption scanning  payloads from the target device if the upload to the  Console or cloud fails
          FromPort: 137
          IpProtocol: tcp
          ToPort: 139
        - CidrIp: 172.19.0.0/16
          Description: Used to pull actual resource consumption scanning  payloads from the target device if the upload to the  Console or cloud fails
          FromPort: 137
          IpProtocol: tcp
          ToPort: 139
        - CidrIp: 172.23.0.0/16
          Description: Used to pull actual resource consumption scanning  payloads from the target device if the upload to the  Console or cloud fails
          FromPort: 137
          IpProtocol: tcp
          ToPort: 139
        - CidrIp: 172.28.0.0/16
          Description: Used to pull actual resource consumption scanning  payloads from the target device if the upload to the  Console or cloud fails
          FromPort: 137
          IpProtocol: tcp
          ToPort: 139
        - CidrIp: 10.98.3.0/24
          Description: Used to pull actual resource consumption scanning  payloads from the target device if the upload to the  Console or cloud fails
          FromPort: 137
          IpProtocol: tcp
          ToPort: 139
        - CidrIp: 10.99.0.0/16
          Description: Used to pull actual resource consumption scanning  payloads from the target device if the upload to the  Console or cloud fails
          FromPort: 137
          IpProtocol: tcp
          ToPort: 139
        - CidrIp: 131.99.0.0/16
          Description: Used to pull actual resource consumption scanning  payloads from the target device if the upload to the  Console or cloud fails
          FromPort: 137
          IpProtocol: tcp
          ToPort: 139
        - CidrIp: 161.108.0.0/16
          Description: Used to pull actual resource consumption scanning  payloads from the target device if the upload to the  Console or cloud fails
          FromPort: 137
          IpProtocol: tcp
          ToPort: 139
        - CidrIp: 206.160.0.0/16
          Description: Used to pull actual resource consumption scanning  payloads from the target device if the upload to the  Console or cloud fails
          FromPort: 137
          IpProtocol: tcp
          ToPort: 139

      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      VpcId:
        Ref: SharedSvcVpc

  securitygroupMovConsecuritygroupMovAlb:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: allow https access from Movere ALB
      FromPort: 443
      GroupId:
        Fn::GetAtt:
          - movereConsoleSecurityGroup
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - movereAlbSecurityGroup
          - GroupId
      ToPort: 443

  MovereAppLdBal:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
      Name: movere-alb
      Scheme: internet-facing
      SecurityGroups:
        - Fn::GetAtt:
            - movereAlbSecurityGroup
            - GroupId
      Subnets:
        - Ref: SharedSvcVpcPubSubnet1a
        - Ref: SharedSvcVpcPubSubnet1b
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      Type: application

  MovereAppLdBalListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: MovereAppLdBalTgtGrp
          Type: forward
      LoadBalancerArn:
        Ref: MovereAppLdBal
      Certificates:
        - CertificateArn: arn:aws:acm:us-east-1:472510080448:certificate/572ecdf8-5546-44ed-9d31-391772dde9b4
      Port: 443
      Protocol: HTTPS

  MovereAppLdBalTgtGrp:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 60
      HealthCheckPath: /index.html
      HealthCheckTimeoutSeconds: 5
      Matcher:
        HttpCode: 200
      Name: movere-tg
      Port: 443
      Protocol: HTTPS
      Targets:
        - Id:
            Ref: movereConsoleEC2Id
          Port: 443
      TargetType: instance
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      VpcId:
        Ref: SharedSvcVpc

Outputs:
  VPCID:
    Description: VPC Identifier
    Value: !Ref SharedSvcVpc
  PrivSubnet1A:
    Description: Private Subnet1a
    Value: !Ref SharedSvcVpcPrivSubnet1a
  PrivSubnet1B:
    Description: Private Subnet1b
    Value: !Ref SharedSvcVpcPrivSubnet1b
  MovereAlbSecurityGroup:
    Description: Movere ALB Security Group
    Value: !Ref movereAlbSecurityGroup
  MovereALBname:
    Description: Full name of the Movere Internet Facing ALB
    Value:
      !GetAtt MovereAppLdBal.LoadBalancerFullName
  MovereALBDnsName:
    Description: DNS name of the Movere Internet Facing ALB
    Value:
      !GetAtt MovereAppLdBal.DNSName
